# adv_mla_at3_experimentation

./: .gitignore  Makefile  README.md  pyproject.toml
advmla_at3_package/: __init__.py  dataset.py  features.py  plots.py
advmla_at3_package/engineering/: clean_master.py
advmla_at3_package/modeling/: null.py  predict.py  train.py
functions/: Eval_func.py
models/: encoder.pkl  keras_model.h5  keras_model.keras  keras_model_early_stopping.keras  linear_model_final.joblib  preprocessor.joblib  scaler.pkl  xgboost_model.joblib
models/LGBM/: LGBM_model.pkl  airport_features_transformer.pkl  preprocessor.pkl
models/nns/: le_airports.joblib  le_route.joblib  nn_model.keras  nn_model2.keras  nn_model3.keras  scaler.joblib
notebooks/: 1_Dhruv_Joshi_25032069_XGBoost.ipynb  1_Dhruv_Joshi_25032069_test.ipynb  1_Taekjin_Jeong_25099654_EDA.ipynb  1_tsui_raymond_10701389_EDA.ipynb  1_tsui_raymond_10701389_Load-Model.ipynb  1_tsui_raymond_10701389_Transform.ipynb  2_Taekjin_Jeong_25099654_pipeline.ipynb  2_tsui_raymond_10701389_Transform.ipynb  3_tsui_raymond_10701389_Model.ipynb  4_tsui_raymond_10701389_LGBMModel.ipynb  4_tsui_raymond_10701389_NNModel.ipynb  5_tsui_raymond_10701389_NNMode_FINAL.ipynb  5_tsui_raymond_10701389_NNModel.ipynb  6_tsui_raymond_10701389_NNModel.ipynb  7_tsui_raymond_10701389_Eval.ipynb  Model_tj.ipynb  Steps.txt  experiment_1.ipynb
notebooks/.ipynb_checkpoints/: 1_Dhruv_Joshi_25032069_test-checkpoint.ipynb
notebooks/ARCHIVE/: experiementdata.ipynb
